css/media.css
@media (max-width: 1230px) {
    .form {
        width: auto;
        height: auto;
    }
    .easepick-wrapper {
        z-index: 9;
    }
    .autoComplete_wrapper > input {
		width: auto !important;
	}
    .form__input--location {
        width: 220px;
    }
    .form__input--activity {
        width: 160px;
    }
    .form__input--date {
        width: 150px;
    }
    .form__input--guests {
        width: 150px;
    } 
}
@media (max-width: 1050px) {
    .section__cards--four {
        grid-template-columns: repeat(2, 1fr);
        
    }
    .card__footer {
        align-items: start;
    }
    .section__cards--two {
        grid-template-columns: 1fr;
    }
    .footer {
        padding: 50px 0;
    }
    .footer__row {
        grid-template-columns: 1fr 2fr;
    }
    .footer__subscribe {
        grid-column-start: 1;
        grid-column-end: 3;
        max-width: unset;
    }
    .footer_nav-wrapper {
        justify-content: space-between;
    }
    .subscribe {
        grid-template-columns: auto 70px;
    }
    .subscribe__input {
        width: 100%;
    }
    .footer__socials--link img {
        max-width: none;
    }
}
@media (max-width: 950px) {
	.header {
        height: auto;
        min-height: 600px;
        border-radius: 0 0 30px 30px;
    }
    .container--header {
        justify-content: flex-start;
        row-gap: 120px;
    }
    .header__title {
        font-size: 34px;
    }
    .mobile-nav-btn {
		display: block;
	}
    .nav-list {
		display: none;
	}
    .nav-user {
		display: none;
	}
    .main {
        row-gap: 50px;
        padding-top: 40px;
        padding-bottom: 40px;
    }
    .section__header {
        margin-bottom: 40px;
    }
    .title-1 {
        font-size: 25px;
    }
    .company__title {
        font-size: 25px;
    } 
    .card__img {
        width: 100%;
    }
    .section__cards--popular {
        grid-template-columns: repeat(3, 1fr);
    }
}
@media (max-width: 810px) {
    .form {
        width: auto;
        height: auto;
        flex-direction: column;
    }
    .form__input-wrapper {
        width: 100%;
    }
    .card__img--h100 {
        height: 100%;
        object-fit: cover;
    }
    .company {
        gap: 20px;
        grid-template-columns: 1fr;
    }
    .company__desk {
        gap: 20px;
    }
}
@media (max-width: 600px) {
    .section__cards--popular {
        grid-template-columns: repeat(2, 1fr);
    }
    .card__title--big {
        font-size: 16px;
    }
    .card__text {
        font-size: 14px;
    }
    .company__text {
        font-size: 14px;
    }
    .card__footer--link {
        font-size: 11px;
    }
    .card__location {
        font-size: 12px;
    }
    .footer__row {
        grid-template-columns: 1fr;
    } 
    .footer__subscribe {
        grid-column-start: auto;
        grid-column-end: auto;
        max-width: unset;
    }
    .footer_nav-wrapper {
        gap: 40px;
    }
}
@media (max-width: 500px) {
    .container--header {
        row-gap: 80px;
    }
    .section__cards--four {
        grid-template-columns: 1fr;
    }
    .card--wide {
        grid-template-columns: 1fr;
        gap: 20px;
    }
}
@media (max-width:440px) {
    .section__cards--popular {
        grid-template-columns: 1fr;
    }  
    .footer__row {
        gap: 30px;
    } 
    .footer_nav-wrapper {
        gap: 20px;
    }
}
@media (max-width: 380px) {
    .subscribe {
        grid-template-columns: 1fr;
    }
    .footer__copyright {
        gap: 10px;
    }
    .button--subscribe {
        width: 100%;
        padding: 5px;
    }
}

